# rio-onderwijsdata

./: .gitignore  CLAUDE.md  README.md  RIO_LOD_API_v2.yml  pyproject.toml
.github/workflows/: update-catalogus.yml
catalogus/: catalogus_ai.py
data/02-prepared/: rio_resources.json
docs/: data.json  duo_data.json  index.html  voorbeelden.json
docs/voorbeelden/: duo_wo_ingeschrevenen_INTERPRETATIE.md  rio_onderwijslocaties_INTERPRETATIE.md
src/riodata/: __init__.py  client.py  duo.py  roa.py  uwv.py
src/riodata/data/: roa_resources.json  uwv_resources.json
verken/: test_endpoints.py  test_modules.py
voorbeelden/: duo_ho_ingeschrevenen_regio.py  duo_wo_ingeschrevenen.py  rio_onderwijslocaties.py
voorbeelden/output/: duo_ho_ingeschrevenen_regio_INTERPRETATIE.md
