[project]
name = "riodata"
version = "0.2.0"
description = "Python client voor open Nederlandse onderwijs- en arbeidsmarktdata: RIO, DUO, ROA en UWV"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "cedanl", email = "info@cedanl.nl" }]
requires-python = ">=3.11"
dependencies = ["httpx"]

[project.optional-dependencies]
analyse = [
    "pandas",
    "matplotlib",
    "openpyxl>=3.1.5",
]
catalogus = ["anthropic>=0.87.0"]
duo = [
    "openpyxl>=3.1.5",
]

[project.urls]
Homepage = "https://cedanl.github.io/rio-onderwijsdata"
Repository = "https://github.com/cedanl/rio-onderwijsdata"

[tool.hatch.build.targets.wheel]
packages = ["src/riodata"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
